{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 20,
  "lineage": "8b5828da-68b4-5393-804e-be95d6d29060",
  "resources": [
    {
      "module": "module.nacl[0]",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "test_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183667100:network-acl/acl-09795a5cb5b441888",
            "egress": [],
            "id": "acl-09795a5cb5b441888",
            "ingress": [],
            "owner_id": "590183667100",
            "subnet_ids": [],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0c6153eb36de7e893"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nacl[0]",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "nacl_association_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-065e599aead55c741",
            "network_acl_id": "acl-09795a5cb5b441888",
            "subnet_id": "subnet-0c1c61c0e3ef5d54f"
          },
          "dependencies": [
            "module.nacl.aws_network_acl.test_nacl",
            "module.subnet.aws_subnet.test_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nacl[0]",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "test_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/24",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-635338755",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-09795a5cb5b441888",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 203,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nacl.aws_network_acl.test_nacl",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/24",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1590293131",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-09795a5cb5b441888",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 204,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nacl.aws_network_acl.test_nacl",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/24",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-32934604",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-09795a5cb5b441888",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nacl.aws_network_acl.test_nacl",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/24",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1065855732",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-09795a5cb5b441888",
            "protocol": "6",
            "rule_action": "deny",
            "rule_number": 101,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nacl.aws_network_acl.test_nacl",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/24",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1573898742",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-09795a5cb5b441888",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nacl.aws_network_acl.test_nacl",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/24",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-966097509",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-09795a5cb5b441888",
            "protocol": "6",
            "rule_action": "deny",
            "rule_number": 201,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nacl.aws_network_acl.test_nacl",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nacl[1]",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "test_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183667100:network-acl/acl-06ca05241b58ab465",
            "egress": [],
            "id": "acl-06ca05241b58ab465",
            "ingress": [],
            "owner_id": "590183667100",
            "subnet_ids": [],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0c6153eb36de7e893"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nacl[1]",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "nacl_association_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0a7b2be4bf8170cd9",
            "network_acl_id": "acl-06ca05241b58ab465",
            "subnet_id": "subnet-081dc134dc6547c71"
          },
          "dependencies": [
            "module.nacl.aws_network_acl.test_nacl",
            "module.subnet.aws_subnet.test_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nacl[1]",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "test_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/24",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1087807798",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-06ca05241b58ab465",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 203,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nacl.aws_network_acl.test_nacl",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/24",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1125417151",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-06ca05241b58ab465",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 204,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nacl.aws_network_acl.test_nacl",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/24",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1694411771",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-06ca05241b58ab465",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nacl.aws_network_acl.test_nacl",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/24",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1519356869",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-06ca05241b58ab465",
            "protocol": "6",
            "rule_action": "deny",
            "rule_number": 101,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nacl.aws_network_acl.test_nacl",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/24",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1074969536",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-06ca05241b58ab465",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nacl.aws_network_acl.test_nacl",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/24",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-608700497",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-06ca05241b58ab465",
            "protocol": "6",
            "rule_action": "deny",
            "rule_number": 201,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nacl.aws_network_acl.test_nacl",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183667100:subnet/subnet-0c1c61c0e3ef5d54f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1c61c0e3ef5d54f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183667100",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Created By": "Kunal",
              "Created On": "19th April, 2024",
              "Scope": "Learning Terraform Modules"
            },
            "tags_all": {
              "Created By": "Kunal",
              "Created On": "19th April, 2024",
              "Scope": "Learning Terraform Modules"
            },
            "vpc_id": "vpc-0c6153eb36de7e893"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183667100:subnet/subnet-081dc134dc6547c71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081dc134dc6547c71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183667100",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Created By": "Kunal",
              "Created On": "19th April, 2024",
              "Scope": "Learning Terraform Modules"
            },
            "tags_all": {
              "Created By": "Kunal",
              "Created On": "19th April, 2024",
              "Scope": "Learning Terraform Modules"
            },
            "vpc_id": "vpc-0c6153eb36de7e893"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183667100:vpc/vpc-0c6153eb36de7e893",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0c26f51d565126d3c",
            "default_route_table_id": "rtb-0497826c41489fe05",
            "default_security_group_id": "sg-018a85aee4ec6f300",
            "dhcp_options_id": "dopt-0911b7bf517aec616",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c6153eb36de7e893",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0497826c41489fe05",
            "owner_id": "590183667100",
            "tags": {
              "Created By": "Kunal",
              "Created On": "19th April, 2024",
              "Scope": "Learning Terraform Modules"
            },
            "tags_all": {
              "Created By": "Kunal",
              "Created On": "19th April, 2024",
              "Scope": "Learning Terraform Modules"
            }
          }
        }
      ]
    }
  ]
}